# c2pulse

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Cfg.fst.config.json  Complex.fst  Makefile  README.md  build.rs  build.sh  build_clang.sh  check-file.sh  complex.c  complex1.c  fstar.fst.config.json  mem.c  mergesort.c  reverse.c  reverse_macro.c  rmap.py  run-lit.sh  run-tests.sh  run.sh  run_c2pulse.sh  run_fstar.sh  swap.c  test.c  test_bool.c  test_runner.sh
.devcontainer/: Containerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  devcontainer.yml
c/: complex.c  pulse_macros.h  pulse_tutorial_ref.c  reverse.c  swap.c  swap_struct.c  u32_pair_struct.c
cpp/: iface.zng  impl.cpp
doc/: Union.fst  translation.txt
examples/: .gitignore  c2pulse.config.json  c2pulse.h  circular_buffer.c  example.c  pal.h  roadmap.c
examples/dpe/: DPE.c  DPE.h  DPETypes.c  EngineCore.c  EngineCore.h  HACL.h  c2pulse.config.json  c2pulse.h  pal.h
examples/tests-todo/: c2pulse.config.json  complex_union_ownership.c  compound_ops.c  expect_failure.c  forward_decl_struct.c  ghost_args_permissions.c  libc_functions.c  logical_int_ops.c  mixed_int_compare.c  null_support.c  pal.config.json  pal.h  recursive_functions.c  stack_arrays.c  unsigned_negation.c  user_defined_predicates.c
handwritten/: List.fst  SwapStruct.Types.fsti
handwritten_pulse/: SwapStruct.Types.fsti  SwapStruct.fst
include/: ANFAndPulseRewriter.h  ANFConsumer.h  ANFFrontendAction.h  ANFTransformer.h  ANFVisitor.h  ExprLocationAnalyzer.h  FileIDHash.h  Globals.h  MacroCommentTracker.h  MacroFrontendAction.h  MacroFrontendActionFactory.h  MacroMetadata.h  PulseASTGenerator.h  PulseCodeGen.h  PulseEmitter.h  PulseGenerator.h  PulseIR.h  PulseMacros.h
include/pulse/: Makefile  Pulse.Lib.C.Array.fsti  Pulse.Lib.C.Casts.Bool.fsti  Pulse.Lib.C.Casts.fst  Pulse.Lib.C.Casts.fsti  Pulse.Lib.C.Inhabited.fsti  Pulse.Lib.C.Int32.fst  Pulse.Lib.C.Ref.fsti  Pulse.Lib.C.SizeT.fst  Pulse.Lib.C.UInt32.fst  Pulse.Lib.C.UnaryOps.fsti  Pulse.Lib.C.fsti
opt/: .gitignore  ci-deps-hash  configure  install-fstar.sh  run-fstar.sh
pulse/: .gitignore  Makefile  Pulse.Lib.C.Array.fsti  Pulse.Lib.C.Assumptions.fsti  Pulse.Lib.C.Casts.Bool.fsti  Pulse.Lib.C.Casts.fst  Pulse.Lib.C.Casts.fsti  Pulse.Lib.C.Inhabited.fsti  Pulse.Lib.C.PtrdiffT.fst  Pulse.Lib.C.Ref.fsti  Pulse.Lib.C.UInt32.fst  Pulse.Lib.C.UnaryOps.fst  Pulse.Lib.C.fsti
scripts/: build_clang.sh  build_snapdb.sh  check_file.sh  create_lit_tests.py  run_c2pulse.sh  run_fstar.sh  run_lit.sh  run_test.sh  run_tests.sh  test_runner.sh
src/: ANFAndPulseRewriter.cpp  ANFConsumer.cpp  ANFFrontendAction.cpp  ANFTransformer.cpp  ANFVisitor.cpp  CMakeLists.txt  ExprLocationAnalyzer.cpp  Globals.cpp  MacroCommentTracker.cpp  MacroFrontendAction.cpp  PulseASTGenerator.cpp  PulseCodeGen.cpp  PulseEmitter.cpp  PulseGenerator.cpp  PulseIR.cpp  check.rs  clang.cpp  clang.rs  clang_bridge.h  diag.rs  elab.rs  emit.rs  env.rs  hauntedc.rs  ir.rs  main.cpp  main.rs  mayberc.rs  prune.rs  source_range_info.rs  vfs.rs
src/ir/: mod.rs  pretty.rs
src/pass/: check.rs  elab.rs  emit.rs  merge.rs  mod.rs  prune.rs  restructure_goto.rs
test/: .gitignore  .lit_test_times.txt  CMakeLists.txt  Cfg.fst.config.json  Makefile  Swap_test.fst  antiquot.c  antiquot_ext.c  array.c  array_test.c  arrayptrs.c  assert_order.c  assign_expr.c  binary_ops.c  bitops.c  bool_add.c  break_continue.c  c2pulse.config.json  c2pulse.h  c_assert.c  compare_elements.c  compare_sizet.c  complex_arith.c  complex_test.c  compound_ops.c  const_read.c  decl_ref.c  default_test.c  do_while.c  duplicate_decl.c  for_loop.c  forward_struct.c  ghost_arg.c  global_var.c  goto_fail.c  implicit_cast.c  implies.c  include.c  inline_pulse_infer.c  inner_struct.c  (+67 more)
test-transpiler/c/: header.h  mergesort.c  pulse_tutorial_box.c  pulse_tutorial_existentials.c  pulse_tutorial_intro.c  simple_struct.c  swap_struct.ast  swap_struct_nested.c
test-transpiler/handwritten_pulse/: Cfg.fst.config.json  Complex.fst  List.fst  Mem.fst  Qsort.fst  StackAllocatedStruct.fst  SwapStruct.fst  Swap_struct_nested.fst
test/2025/: .gitignore  Makefile
test/dpe/: EngineCore.c
test/engine/: DPE.c  DPE.h  EngineCore.c  HACL.h  c2pulse.config.json
test/general/: bool_add.c  c2pulse.config.json  complex_test.c  demo.c  global_test.c  heap_allocated_array.c  malloc_int_test.c  nested_struct.c  nested_struct_with_arrays.c  nested_unions.c  pulse_tutorial_array.c  pulse_tutorial_box.c  pulse_tutorial_conditionals.c  pulse_tutorial_existentials.c  pulse_tutorial_intro.c  pulse_tutorial_loops.c  pulse_tutorial_ref.c  pulse_user_defined_predicates1.c  pulse_user_defined_predicates2.c  random.c  reverse_test.c  simple_nested_struct_test.c  simple_reference_test.c  simple_struct_test.c  stack_allocated_array.c  stack_allocated_point.c  swap_struct_test.c  swap_struct_test_2.c  swap_struct_test_3.c  swap_struct_test_4.c  swap_test.c  test_bool.c  test_bool_2.c  test_from_doc.c  test_funs.c  test_funs4.c  test_infer_returns.c  test_logicals_int.c  test_sizet.c  test_union.c  (+1 more)
test/include/: LibcFunctions.h  PulseMacros.h  constants.h
test/issue/: issue15_test.c  issue1_test.c  issue9_test.c
test/issue-related/: issue15_test.c  issue16_test.c  issue18_test.c  issue1_test.c  issue22_test.c  issue24_test.c  issue24_test2.c  issue26_test.c  issue27_test.c  issue29_test.c  issue2_test.c  issue30_test.c  issue31_test.c  issue32_test.c  issue33_test.c  issue34_test.c  issue35_test.c  issue37_test.c  issue38_test.c  issue38_test_2.c  issue38_test_3.c  issue38_test_5.c  issue38_test_6.c  issue39.c  issue42.c  issue43_test.c  issue44_test.c  issue45_test.c  issue46_test.c  issue48_test.c  issue49_test.c  issue51_test.c  issue51_test_2.c  issue52_test.c  issue52_test_2.c  issue53_test.c  issue54_test.c  issue54_test_2.c  issue54_test_3.c  issue55_test.c  (+6 more)
test/lit-tests/: complex_test.c  issue15_test.c  issue18_test.c  issue1_test.c  issue2_test.c  lit.cfg.py  pulse_tutorial_box.c  pulse_tutorial_ref.c  (+8 more)
(+241 files in other folders)
