[package]
name = "pal"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = "0.12.0"
clap = { version = "4.5.60", features = ["derive"] }
codespan-reporting = "0.13.1"
lsp-types = "0.97.0"
num-bigint = "0.4"
pretty = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
build-rs = "0.3.3"
cc = "1.2.56"
zngur = "0.7.0"
